fix: z-index for Quick View

--- a/src/styles/sections/quick-view.scss
+++ b/src/styles/sections/quick-view.scss
@@ -12,6 +12,7 @@
   position: fixed;
   top: 0; bottom: 0;
   left: 0; right: 0;
+  z-index: 30;
 
   display: flex;
   align-items: center;
